<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|start"

    android:orientation="vertical"

    android:paddingTop="56dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".Login">


    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="52dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/pstilogo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/selamat_datang_di_my_informatika"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/show_password_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/tampilkan_password"
        android:layout_marginBottom="32dp"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loading"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/poppins_regular"
        style="@style/CustomButton" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/register_link"
        android:layout_height="wrap_content"
        android:text="@string/register_link"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_regular"
        android:textColor="#44985D"
        android:paddingTop="10dp"
        android:layout_marginStart="8dp" />
</LinearLayout>