<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"

    tools:context=".EditProfile">

    <ImageView
        android:id="@+id/edit_profile_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle_background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/profile_photo"
        android:src="@drawable/baseline_add_a_photo_24"
        />

    <TextView
        android:id="@+id/edit_choose_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_photo"
        android:fontFamily="@font/poppins_regular"
        android:textColor="#888888"
        android:layout_marginBottom="32dp"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_username"
            android:fontFamily="@font/poppins_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/profile_name"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_student_id"
            android:fontFamily="@font/poppins_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/student_id"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_change"
        android:fontFamily="@font/poppins_regular"
        style="@style/CustomButton" />
    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:fontFamily="@font/poppins_regular"
        style="@style/CustomButton" />

</LinearLayout>